--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
